rwf-bin/src/ui/dialog/snapshot_tests/snapshots/rwf__ui__dialog__snapshot_tests__help_empty_80x24.snap
---
source: rwf-bin/src/ui/dialog/snapshot_tests/mod.rs
expression: "render_dialog_to_string(dialog, state, width, height)"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 24 },
    content: [
        "                                                                                ",
        "            ┌Help──────────────────────────────────────────────────┐            ",
        "            │ [^1:Normal]  ^2:Viewer  ^3:Leap  ^4:Dialog  ^5:Custo │            ",
        "            │ /                                                    │            ",
        "            │                                                      │            ",
        "            │                                                      │            ",
        "            │                                                      │            ",
        "            │                                                      │            ",
        "            │                                                      │            ",
        "            │                                                      │            ",
        "            │                                                      │            ",
        "            │                                                      │            ",
        "            │                                                      │            ",
        "            │                                                      │            ",
        "            │                                                      │            ",
        "            │                                                      │            ",
        "            │                                                      │            ",
        "            │                                                      │            ",
        "            │                                                      │            ",
        "            │                                                      │            ",
        "            │                                                      │            ",
        "            │ (0)  u:hide unbound  L:lang(en)  Ctrl+R:regex        │            ",
        "            └──────────────────────────────────────────────────────┘            ",
        "                                                                                ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 1, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 13, y: 1, fg: Black, bg: Gray, underline: Reset, modifier: BOLD,
        x: 17, y: 1, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 68, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 2, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 13, y: 2, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 14, y: 2, fg: Black, bg: White, underline: Reset, modifier: BOLD,
        x: 25, y: 2, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 27, y: 2, fg: DarkGray, bg: Gray, underline: Reset, modifier: NONE,
        x: 36, y: 2, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 38, y: 2, fg: DarkGray, bg: Gray, underline: Reset, modifier: NONE,
        x: 45, y: 2, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 47, y: 2, fg: DarkGray, bg: Gray, underline: Reset, modifier: NONE,
        x: 56, y: 2, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 58, y: 2, fg: DarkGray, bg: Gray, underline: Reset, modifier: NONE,
        x: 66, y: 2, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 67, y: 2, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 68, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 3, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 13, y: 3, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 14, y: 3, fg: White, bg: DarkGray, underline: Reset, modifier: NONE,
        x: 66, y: 3, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 67, y: 3, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 68, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 4, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 13, y: 4, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 67, y: 4, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 68, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 5, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 13, y: 5, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 67, y: 5, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 68, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 6, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 13, y: 6, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 67, y: 6, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 68, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 7, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 13, y: 7, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 67, y: 7, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 68, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 8, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 13, y: 8, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 67, y: 8, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 68, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 9, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 13, y: 9, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 67, y: 9, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 68, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 10, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 13, y: 10, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 67, y: 10, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 68, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 11, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 13, y: 11, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 67, y: 11, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 68, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 12, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 13, y: 12, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 67, y: 12, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 68, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 13, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 13, y: 13, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 67, y: 13, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 68, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 14, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 13, y: 14, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 67, y: 14, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 68, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 15, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 13, y: 15, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 67, y: 15, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 68, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 16, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 13, y: 16, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 67, y: 16, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 68, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 17, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 13, y: 17, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 67, y: 17, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 68, y: 17, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 18, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 13, y: 18, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 67, y: 18, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 68, y: 18, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 19, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 13, y: 19, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 67, y: 19, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 68, y: 19, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 20, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 13, y: 20, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 67, y: 20, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 68, y: 20, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 21, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 13, y: 21, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 14, y: 21, fg: DarkGray, bg: Gray, underline: Reset, modifier: NONE,
        x: 66, y: 21, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 67, y: 21, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 68, y: 21, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 22, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 68, y: 22, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
