rwf-bin/src/ui/dialog/snapshot_tests/snapshots/rwf__ui__dialog__snapshot_tests__help_populated_120x40.snap
---
source: rwf-bin/src/ui/dialog/snapshot_tests/mod.rs
expression: "render_dialog_to_string(dialog, state, width, height)"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 120, height: 40 },
    content: [
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                  ┌Help──────────────────────────────────────────────────────────────────────────────┐                  ",
        "                  │ [^1:Normal]  ^2:Viewer  ^3:Leap  ^4:Dialog  ^5:Custom                            │                  ",
        "                  │ /                                                                                │                  ",
        "                  │ Navigation       Move up one line                                       k        │                  ",
        "                  │ Navigation       Move down one line                                     j        │                  ",
        "                  │ File Operations  Copy selected file                                     c        │                  ",
        "                  │                                                                                  │                  ",
        "                  │                                                                                  │                  ",
        "                  │                                                                                  │                  ",
        "                  │                                                                                  │                  ",
        "                  │                                                                                  │                  ",
        "                  │                                                                                  │                  ",
        "                  │                                                                                  │                  ",
        "                  │                                                                                  │                  ",
        "                  │                                                                                  │                  ",
        "                  │                                                                                  │                  ",
        "                  │                                                                                  │                  ",
        "                  │                                                                                  │                  ",
        "                  │                                                                                  │                  ",
        "                  │                                                                                  │                  ",
        "                  │                                                                                  │                  ",
        "                  │                                                                                  │                  ",
        "                  │                                                                                  │                  ",
        "                  │                                                                                  │                  ",
        "                  │                                                                                  │                  ",
        "                  │                                                                                  │                  ",
        "                  │                                                                                  │                  ",
        "                  │                                                                                  │                  ",
        "                  │                                                                                  │                  ",
        "                  │                                                                                  │                  ",
        "                  │ (3)  u:hide unbound  L:lang(en)  Ctrl+R:regex                                    │                  ",
        "                  └──────────────────────────────────────────────────────────────────────────────────┘                  ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 18, y: 4, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 19, y: 4, fg: Black, bg: Gray, underline: Reset, modifier: BOLD,
        x: 23, y: 4, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 102, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 18, y: 5, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 19, y: 5, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 20, y: 5, fg: Black, bg: White, underline: Reset, modifier: BOLD,
        x: 31, y: 5, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 33, y: 5, fg: DarkGray, bg: Gray, underline: Reset, modifier: NONE,
        x: 42, y: 5, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 44, y: 5, fg: DarkGray, bg: Gray, underline: Reset, modifier: NONE,
        x: 51, y: 5, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 53, y: 5, fg: DarkGray, bg: Gray, underline: Reset, modifier: NONE,
        x: 62, y: 5, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 64, y: 5, fg: DarkGray, bg: Gray, underline: Reset, modifier: NONE,
        x: 73, y: 5, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 100, y: 5, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 101, y: 5, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 102, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 18, y: 6, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 19, y: 6, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 20, y: 6, fg: White, bg: DarkGray, underline: Reset, modifier: NONE,
        x: 100, y: 6, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 101, y: 6, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 102, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 18, y: 7, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 19, y: 7, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 20, y: 7, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 93, y: 7, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 101, y: 7, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 102, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 18, y: 8, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 19, y: 8, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 20, y: 8, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 93, y: 8, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 101, y: 8, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 102, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 18, y: 9, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 19, y: 9, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 20, y: 9, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 93, y: 9, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 101, y: 9, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 102, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 18, y: 10, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 19, y: 10, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 101, y: 10, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 102, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 18, y: 11, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 19, y: 11, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 101, y: 11, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 102, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 18, y: 12, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 19, y: 12, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 101, y: 12, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 102, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 18, y: 13, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 19, y: 13, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 101, y: 13, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 102, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 18, y: 14, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 19, y: 14, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 101, y: 14, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 102, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 18, y: 15, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 19, y: 15, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 101, y: 15, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 102, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 18, y: 16, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 19, y: 16, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 101, y: 16, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 102, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 18, y: 17, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 19, y: 17, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 101, y: 17, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 102, y: 17, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 18, y: 18, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 19, y: 18, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 101, y: 18, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 102, y: 18, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 18, y: 19, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 19, y: 19, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 101, y: 19, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 102, y: 19, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 18, y: 20, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 19, y: 20, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 101, y: 20, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 102, y: 20, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 18, y: 21, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 19, y: 21, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 101, y: 21, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 102, y: 21, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 18, y: 22, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 19, y: 22, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 101, y: 22, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 102, y: 22, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 18, y: 23, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 19, y: 23, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 101, y: 23, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 102, y: 23, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 18, y: 24, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 19, y: 24, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 101, y: 24, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 102, y: 24, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 18, y: 25, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 19, y: 25, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 101, y: 25, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 102, y: 25, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 18, y: 26, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 19, y: 26, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 101, y: 26, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 102, y: 26, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 18, y: 27, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 19, y: 27, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 101, y: 27, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 102, y: 27, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 18, y: 28, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 19, y: 28, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 101, y: 28, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 102, y: 28, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 18, y: 29, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 19, y: 29, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 101, y: 29, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 102, y: 29, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 18, y: 30, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 19, y: 30, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 101, y: 30, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 102, y: 30, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 18, y: 31, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 19, y: 31, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 101, y: 31, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 102, y: 31, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 18, y: 32, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 19, y: 32, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 101, y: 32, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 102, y: 32, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 18, y: 33, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 19, y: 33, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 101, y: 33, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 102, y: 33, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 18, y: 34, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 19, y: 34, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 20, y: 34, fg: DarkGray, bg: Gray, underline: Reset, modifier: NONE,
        x: 100, y: 34, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 101, y: 34, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 102, y: 34, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 18, y: 35, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 102, y: 35, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
